# package-tracker

./: BA_PACKAGE.cmake  BA_PACKAGE_DEPS.cmake  BA_PACKAGE_VARS.cmake  README.md  STORAGE.cmake
example/: CMLibStorage.cmake  CMakeLists.txt  README.md  main.cpp
test/: CMakeLists.txt  README.md  main.c  run_app_tests.cmake  run_tests.cmake  run_tests.sh  run_vars_test.cmake
test/app/: CMakeLists.txt
test/app/lib/shared_library/: CMakeLists.txt
test/app/lib/shared_library_for_prerun/: CMakeLists.txt
test/app/tests_list/: standard_install.txt  symlink_named_differently.txt  symlink_named_dirrefently.txt  symlink_named_same_as_file.txt
test/lib/shared_library/: CMakeLists.txt  library.c
test/lib/shared_library_for_prerun/: CMakeLists.txt
test/lib/shared_library_for_prerun/include/: shared_out_of_dir_symlink.h
test/lib/shared_out_of_dir_symlink/: CMakeLists.txt  library.c
test/lib/shared_with_soname/: CMakeLists.txt
test/shared_out_of_dir_symlink/: CMakeLists.txt  library.c
test/shared_with_soname/: CMakeLists.txt
test/tests_list/: error_symlink_named_same_as_file.txt  standard_install.txt  success  success.txt  symlink_named_dirrefently.txt  symlink_named_same_as_file.txt
