SET(PROJECT_NAME    shared_with_soname)
SET(PROJECT_VERSION 1.2.8)

PROJECT(${PROJECT_NAME} C)
CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

SET(CMAKE_BUILD_TYPE Release)

FIND_PACKAGE(CMLIB COMPONENTS CMDEF REQUIRED)

SET(install_dir  "lib_ext/${PROJECT_NAME}")
SET(library_name "${PROJECT_NAME}")
SET(version      "${PROJECT_VERSION}")

CMDEF_ADD_LIBRARY(
    LIBRARY_GROUP ${PROJECT_NAME}
    TYPE          SHARED
    SOURCES       library.c
    VERSION       ${PROJECT_VERSION}
)

SET_TARGET_PROPERTIES(${PROJECT_NAME}-shared
    PROPERTIES
        SOVERSION ${PROJECT_VERSION}
        VERSION   ${PROJECT_VERSION}
)

SET(old_install_dir ${CMDEF_LIBRARY_INSTALL_DIR})
SET(CMDEF_LIBRARY_INSTALL_DIR "${install_dir}"
    CACHE STRING "Overriden"
    FORCE
)
CMDEF_INSTALL(TARGET ${PROJECT_NAME}-shared)
SET(CMDEF_LIBRARY_INSTALL_DIR "${old_install_dir}"
    CACHE STRING "Overriden"
    FORCE
)

# Create a package
CMDEF_PACKAGE(
    MAIN_TARGET ${PROJECT_NAME}-shared
    VERSION     ${PROJECT_VERSION}
)

SET(CPACK_GENERATOR ZIP)
INCLUDE(CPack)