CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

SET(PROJECT_NAME shared_library_for_prerun)
PROJECT(${PROJECT_NAME} LANGUAGES C)

SET(PROJECT_VERSION 5.8.9)
FIND_PACKAGE(CMLIB COMPONENTS CMDEF REQUIRED)

OPTION(SYMLINK_NAME_IS_SAME_AS_LIBRARY_NAME "Set to ON if library symlink name should be same as library name" OFF)

SET(install_dir  "lib/${PROJECT_NAME}")
SET(old_install_dir ${CMDEF_LIBRARY_INSTALL_DIR})

CMDEF_ADD_LIBRARY(
    LIBRARY_GROUP ${PROJECT_NAME}
    TYPE          SHARED
    SOURCES       library.c
    INSTALL_INCLUDE_DIRECTORIES include/
    VERSION       ${PROJECT_VERSION}
)

SET_TARGET_PROPERTIES(${PROJECT_NAME}-shared
    PROPERTIES
        SOVERSION ${PROJECT_VERSION}
        VERSION   ${PROJECT_VERSION}
)

SET(CMDEF_LIBRARY_INSTALL_DIR "${install_dir}"
    CACHE STRING "Overriden"
    FORCE
)
CMDEF_INSTALL(TARGET ${PROJECT_NAME}-shared)
SET(CMDEF_LIBRARY_INSTALL_DIR "${old_install_dir}"
    CACHE STRING "Overriden"
    FORCE
)

# Create a package
CMDEF_PACKAGE(
    MAIN_TARGET ${PROJECT_NAME}-shared
    VERSION     ${PROJECT_VERSION}
)

SET(CPACK_GENERATOR ZIP)
INCLUDE(CPack)