CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

SET(PROJECT_NAME shared-library)
PROJECT(${PROJECT_NAME} LANGUAGES C)

IF(NOT DEFINED LIBRARY_VERSION)
    MESSAGE(FATAL_ERROR "Please specify LIBRARY_VERSION in format major.minor.patch")
ENDIF()
IF(NOT CMAKE_BUILD_TYPE STREQUAL "Release")
    MESSAGE(FATAL_ERROR "Only supported build type is Release! (specify by CMAKE_BUILD_TYPE)")
ENDIF()

FIND_PACKAGE(CMLIB COMPONENTS CMDEF REQUIRED)

SET(install_dir  "lib/${PROJECT_NAME}")
SET(library_name "${PROJECT_NAME}")
SET(version      "${LIBRARY_VERSION}")

CMDEF_ADD_LIBRARY(
    LIBRARY_GROUP ${PROJECT_NAME}
    TYPE          SHARED
    SOURCES       library.c
    VERSION       ${LIBRARY_VERSION}
)

SET_TARGET_PROPERTIES(${PROJECT_NAME}-shared
    PROPERTIES
        SOVERSION ${LIBRARY_VERSION}
        VERSION   ${LIBRARY_VERSION}
)

CMDEF_INSTALL(TARGET ${PROJECT_NAME}-shared
    NAMESPACE ${PROJECT_NAME}-shared::
)

# Create a package
CMDEF_PACKAGE(
    MAIN_TARGET ${PROJECT_NAME}-shared
    VERSION     ${LIBRARY_VERSION}
)

SET(CPACK_GENERATOR ZIP)
INCLUDE(CPack)