CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

SET(PROJECT_NAME shared-library-for-prerun)
PROJECT(${PROJECT_NAME} LANGUAGES C)

IF(NOT DEFINED LIBRARY_VERSION)
    MESSAGE(FATAL_ERROR "Please specify LIBRARY_VERSION in format major.minor.patch")
ENDIF()
IF(NOT CMAKE_BUILD_TYPE STREQUAL "Release")
    MESSAGE(FATAL_ERROR "Only supported build type is Release! (specify by CMAKE_BUILD_TYPE)")
ENDIF()

FIND_PACKAGE(CMLIB COMPONENTS CMDEF REQUIRED)

OPTION(SYMLINK_NAME_IS_SAME_AS_LIBRARY_NAME "Set to ON if library symlink name should be same as library name" OFF)

SET(install_dir  "lib/${PROJECT_NAME}")
SET(old_install_dir ${CMDEF_LIBRARY_INSTALL_DIR})

CMDEF_ADD_LIBRARY(
    LIBRARY_GROUP ${PROJECT_NAME}
    TYPE          SHARED
    SOURCES       library.c
    INSTALL_INCLUDE_DIRECTORIES include/
    VERSION       ${LIBRARY_VERSION}
)

SET_TARGET_PROPERTIES(${PROJECT_NAME}-shared
    PROPERTIES
        SOVERSION ${LIBRARY_VERSION}
        VERSION   ${LIBRARY_VERSION}
)

SET(CMDEF_LIBRARY_INSTALL_DIR "${install_dir}"
    CACHE STRING "Overridden"
    FORCE
)
CMDEF_INSTALL(
    TARGET ${PROJECT_NAME}-shared
    NAMESPACE ${PROJECT_NAME}-shared::
    NO_INSTALL_CONFIG ON
)
SET(CMDEF_LIBRARY_INSTALL_DIR "${old_install_dir}"
    CACHE STRING "Overridden"
    FORCE
)